--- a/resume.tex
+++ b/resume.tex
@@ -1,3 +1,6 @@
+% !TeX encoding = UTF-8
+% !TeX program = xelatex
+% !TeX spellcheck = en_US
 \documentclass{resume}
 \usepackage{zh_CN-Adobefonts_external} 
 \usepackage{linespacing_fix}
