--- a/resume.tex
+++ b/resume.tex
@@ -1,6 +1,7 @@
 % !TeX encoding = UTF-8
 % !TeX program = xelatex
 % !TeX spellcheck = en_US
+% choose Xelatex compiler 选择Xelatex进行编译
 \documentclass{resume}
 \usepackage{zh_CN-Adobefonts_external} 
 \usepackage{linespacing_fix}
