--- a/resume.tex
+++ b/resume.tex
@@ -11,7 +11,7 @@
 % you should read https://www.overleaf.com/learn/latex/Learn_LaTeX_in_30_minutes to learn basic latex
 
 % read manual https://github.com/xiangrongjingujiu/latex-languageSelection
-\usepackage[English]{languageSelection}
+\usepackage[Chinese]{languageSelection}
 
 % read manual https://github.com/xiangrongjingujiu/latex-note-plus
 \usepackage[color=blue]{notePlus} 
