--- a/resume.tex
+++ b/resume.tex
@@ -32,9 +32,9 @@
   \name{Jianhong Fang}
 }
 %**********************************相关信息****************************************
-% \otherInfo后面的四个大括号里的所有信息都会在一行输出，最多使用四个大括号，填写四个信息
+% \info后面的四个大括号里的所有信息都会在一行输出，最多使用四个大括号，填写四个信息
 % 如果选择不填信息，那么大括号必须空着不写，而不能删除大括号。
-% 如果想要把信息写两行，那就用两次指令\otherInfo{}{}{}{}即可
+% 如果想要把信息写两行，那就用两次指令\info{}{}{}{}即可
 \CN{
   \info{手机：(+86) 1234567890}{邮箱：test@test.test}{}{}
   \info{性别：男}{籍贯：江南}{}{}
@@ -46,6 +46,9 @@
   \info{Origin: Fortress Besieged}{}{}{}
 }
 
+\begin{comment}
+  这里面是注释内容，不会输出到最后的文档中，等价于在这些行前面添加%
+\end{comment}
 %*********************************照片**********************************************
 %照片需要放到images文件夹下，名字必须是you.jpg，如果不需要照片可以注释掉此行命令
 %0.15的意思是，照片的大小是0.15倍，调整大小，避免遮挡文字
