--- a/resume.tex
+++ b/resume.tex
@@ -48,6 +48,8 @@
 
 \begin{comment}
   这里面是注释内容，不会输出到最后的文档中，等价于在这些行前面添加%
+
+  不要随便删除内容，暂时不需要的内容，可以放到这个里面。
 \end{comment}
 %*********************************照片**********************************************
 %照片需要放到images文件夹下，名字必须是you.jpg，如果不需要照片可以注释掉此行命令
